--- a/.env
+++ b/.env
@@ -18,3 +18,7 @@ CACHE_TTL=3600
 REQUEST_TIMEOUT=30
 MAX_CONCURRENT_REQUESTS=5
 
+REDIS_URL=redis://:123456@127.0.0.1:6379/0
+CELERY_BROKER_URL=redis://:123456@127.0.0.1:6379/1
+CELERY_RESULT_BACKEND=redis://:123456@127.0.0.1:6379/2
+SOCKETIO_MESSAGE_QUEUE=redis://:123456@127.0.0.1:6379/8
