--- a/env.example
+++ b/env.example
@@ -4,6 +4,27 @@ DEEPSEEK_API_KEY=your-deepseek-api-key-here
 # Flask配置
 SECRET_KEY=your-secret-key-here
 
+# Redis配置
+REDIS_URL=redis://localhost:6379/0
+
+# Flask-Redis配置
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+# REDIS_PASSWORD=your-redis-password  # 如果Redis设置了密码
+
+# Celery配置
+CELERY_BROKER_URL=redis://localhost:6379/0
+CELERY_RESULT_BACKEND=redis://localhost:6379/0
+
+# SocketIO配置（分布式部署）
+SOCKETIO_MESSAGE_QUEUE=redis://localhost:6379/1
+SOCKETIO_CHANNEL=ai_agent_socketio
+
+# 分布式部署配置
+# INSTANCE_ID=web1  # 实例ID（自动设置）
+# WORKER_ID=worker1  # Worker ID（自动设置）
+
 # 可选配置
 # FLASK_ENV=development
 # FLASK_DEBUG=True
