--- a/env.example
+++ b/env.example
@@ -25,6 +25,12 @@ SOCKETIO_CHANNEL=ai_agent_socketio
 # INSTANCE_ID=web1  # 实例ID（自动设置）
 # WORKER_ID=worker1  # Worker ID（自动设置）
 
+# MongoDB配置
+MONGODB_HOST=mongodb://admin:123456@127.0.0.1:27017/ai_agent_db?authSource=admin
+
+# 钱包认证配置
+JWT_SECRET=your-jwt-secret-key-here
+
 # 可选配置
 # FLASK_ENV=development
 # FLASK_DEBUG=True
