--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,8 @@ gevent==23.9.1
 aiohttp==3.9.1
 python-socketio==5.10.0
 flower==2.0.1
+pymongo==4.6.1
+mongoengine==0.28.2
+web3==6.15.1
+eth-account==0.10.0
+PyJWT==2.8.0
